[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlflow-explainable"
version = "1.0.0"
description = "Log explainable ML models (predictor + SHAP explainer) to MLflow as a single self-contained pyfunc artifact."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Pongsakorn", email = "prince.pongsakorn@outlook.com" },
]
keywords = ["mlflow", "shap", "xai", "explainable-ai", "machine-learning", "pyfunc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mlflow>=2.0,<4",
    "shap>=0.43",
    "cloudpickle>=2.0",
    "numpy>=1.23",
    "pandas>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "scikit-learn>=1.2",
    "build>=1.0",
    "twine>=4.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/princepongsakorn/mlflow-explainable"
Repository = "https://github.com/princepongsakorn/mlflow-explainable"
Issues = "https://github.com/princepongsakorn/mlflow-explainable/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mlflow_explainable = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
